# ws_droneOS

./: .dockerignore  .gitignore  99-coral-edgetpu.rules  99-pixhawk.rules  AI_Drone_Commander_Plan.md  BASIC_RTL_GUIDE.md  CLAUDE.md  Doxyfile  FAILSAFE_TEST_GUIDE.md  README.md  ROSBRIDGE_INTEGRATION.md  autonomous_flight_stack_blog_post.md  container_orchestration_embedded_blog_post.md  current context  debug_ros2.sh  docker-compose.dev.drone2.yml  docker-compose.dev.yml  docker-compose.gcs.yml  docker-compose.yml  drone_core.Dockerfile  drone_gcs_cli.Dockerfile  fastdds_client.xml  fastdds_config.xml  fastdds_config_drone.xml  fastdds_config_ground.xml  fastdds_discovery_server.xml  fastdds_local.xml  fastdds_super_client.xml  launch_telemetry_system.sh  micro_agent.Dockerfile  package-lock.json  probe_telit_at_port.sh  ros_entrypoint.sh  rosbridge_launch.py  run_dev_sim.sh  setup_basic_failsafe.py  start_telemetry_system.sh  super_client_configuration_file.xml  telit_troubleshoot.sh  test_failsafe.py  (+5 more)
docker/dev/: agent_system.dev.Dockerfile  camera.dev.Dockerfile  docker-compose.dev.yml  docker-compose.edge_tpu_test.yml  docker-compose.object_detector.yml  docker-compose.web.yml  drone_core.dev.Dockerfile  edge_tpu_test.Dockerfile  micro_agent.dev.Dockerfile  object_detector.dev.Dockerfile  object_detector_ros2.dev.Dockerfile  object_detector_simple.dev.Dockerfile  ros_entrypoint_agent.sh
docker/ground_station/: README.md  docker-compose.ground.yml  launch_ground_station.sh
docker/prod/: docker-compose.web.yml  docker-compose.yml  drone_core.Dockerfile  fastdds_config_drone.xml  nginx.conf  ros_entrypoint.sh  set_video_config.sh  web_entrypoint.sh  web_interface.Dockerfile
docs/html/: CONTRIBUTING_8md.html  annotated.html  annotated_dup.js  classCommandRelay-members.html  classCommandRelay.html  classCommandRelay.js  classCommandRelay__coll__graph.map  classCommandRelay__coll__graph.md5  classDroneAgent-members.html  classDroneAgent.html  classDroneAgent.js  classDroneAgent__coll__graph.map  classDroneAgent__coll__graph.md5  classDroneController-members.html  classDroneController.html  classDroneController.js  classDroneController__coll__graph.map  classDroneController__coll__graph.md5  classDroneManager-members.html  classDroneManager.html  classDroneManager.js  classDroneManager__coll__graph.map  classDroneManager__coll__graph.md5  classOffboardControl-members.html  classOffboardControl.html  classOffboardControl.js  classOffboardControl__coll__graph.map  classOffboardControl__coll__graph.md5  classes.html  command__relay_8cpp.html  command__relay_8cpp__incl.map  command__relay_8cpp__incl.md5  command__relay_8cpp_source.html  command__relay_8hpp.html  command__relay_8hpp__dep__incl.map  command__relay_8hpp__dep__incl.md5  command__relay_8hpp__incl.map  command__relay_8hpp__incl.md5  command__relay_8hpp_source.html  dir_000006_000002.html  (+89 more)
docs/latex/: CONTRIBUTING_8md.tex  annotated.tex  classCommandRelay.tex  classCommandRelay__coll__graph.md5  classDroneAgent.tex  classDroneAgent__coll__graph.md5  classDroneController.tex  classDroneController__coll__graph.md5  classDroneManager.tex  classDroneManager__coll__graph.md5  classOffboardControl.tex  classOffboardControl__coll__graph.md5  (+47 more)
models/: coco_labels.txt
src/drone_core/: CMakeLists.txt  LICENSE  README.md  package.xml
src/drone_core/include/drone_core/: drone_agent.hpp  drone_controller.hpp  drone_node.hpp  drone_state.hpp  drone_state_publisher.hpp  failsafe_monitor.hpp  mission_manager.hpp  offboard_control.hpp
src/drone_core/include/drone_core/utils/: state_enums.hpp
src/drone_core/src/: main.cpp  telemetry_publisher_node.cpp
src/drone_core/src/drone_core/: drone_agent.cpp  drone_controller.cpp  drone_node.cpp  drone_state.cpp  drone_state_publisher.cpp  failsafe_monitor.cpp  mission_manager.cpp  offboard_control.cpp
src/drone_core/src/utils/: state_enums.cpp
src/drone_interfaces/: CMakeLists.txt  README.md  package.xml
src/drone_interfaces/msg/: DroneState.msg  Waypoint.msg
src/drone_interfaces/srv/: ExecuteAIAgent.srv  GetMissionStatus.srv  GetState.srv  MissionControl.srv  SetPosition.srv  UploadMission.srv
src/object_detector_coral/: package.xml  setup.cfg  setup.py
src/object_detector_coral/object_detector_coral/: __init__.py  detector_node.py
web_interface/: Dockerfile  README.md  nginx.conf  start_backend.sh  start_frontend.sh
(+159 files in other folders)
