<package format="2">
  <name>drone_core</name>
  <version>0.0.1</version>
  <description>Multi-drone PX4 control SDK with mission management</description>

  <maintainer email="ortegarod000@gmail.com">Rodrigo Ortega</maintainer>
  <license>Proprietary</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <depend>rclcpp</depend>
  <depend>px4_msgs</depend>
  <depend>yaml-cpp</depend>
  <depend>std_srvs</depend>
  <depend>drone_interfaces</depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
